# CoronaEffectSeparator

./: CMakeLists.txt  README.md
CAD_conveyor/: conveyor.sldprt  conveyor_Ida.py  drum.sldprt  test_2.ces  test_4.ces  test_5.ces
CAD_conveyor/CAD/: Spazzola.SLDPRT  Splitter2.SLDPRT  drum.sldprt
CAD_conveyor/CES_model_shapes/: dump_log.txt
cmake/: FindChronoEngine.cmake  README.txt
input/CAD_conveyor/: CES_model.py  settings.ces  test_1.ces  test_3.ces  test_6.ces
input/CAD_conveyor/CAD/: Splitter.SLDPRT  conveyor.sldprt
input/particlescan/: ReadMe.txt  draw_particle.m  geometric_list-CU.txt  geometric_list-PCB.txt
matlab/: MediaLanci.m  Separation data3.xls  eddy_multi_fri_ene_stoc.m  eddy_simple_multi.m
objects/: assembly_conveyor.SLDASM  cad_conveyor.py  settings.ces
objects/cad_conveyor_shapes/: dump_log.txt
objects/fonts/: arial8.xml
python/: __run__.ces  lancia_simulatore.py  lancia_simulatore_parallel.py
source/: AsyncSerial.cpp  AsyncSerial.h  ChParticleEmitter.h  ElectricForcesCES.h  ElectricParticleAssets.cpp  ElectricParticleAssets.h  ElectricParticleProperty.h  ElectrostaticCoronaSeparator.cpp  ElectrostaticCoronaSeparator.h  ParserChDistribution.h  ParserChRandomShapeCreator.h  ParserElectricForcesCES.h  ParserEmitter.h  ProcessFlow.h  SerialComm.h  SimulatorCES.h  UserInterfaceEventReceiver.cpp  UserInterfaceEventReceiver.h  ___conveyor - vecchio.cpp  conveyor.cpp  conveyor_Ida.cpp  main.cpp
